# file-microservice

./: .gitignore  README.md  docker-compose.yml
app/: api.py  database.py  main.py  pyproject.toml  requirements.txt  settings.py
